[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygeoflood"
version = "1.0.1"
authors = [
    { name = "Paola Passalacqua", email = "paola@austin.utexas.edu" },
    { name = "Xing Zheng", email = "zhengxingwhu@gmail.com" },
    { name = "Alec Carruthers", email = "author@example.com" },
]
maintainers = [
    { name = "Mark Wang", email = "mark.wang@utexas.edu" },
    { name = "Matthew Preisser", email = "mattpreisser@gmail.com" },
    { name = "Paola Passalacqua", email = "paola@austin.utexas.edu" },
]
description = "Flood mapping program based on high-resolution terrain analyses"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "geopandas",
    "ipykernel",
    "matplotlib",
    "netCDF4",
    "numba",
    "numpy",
    "pandas",
    "proj",
    "rasterio",
    "scipy",
    "six",
    "statsmodels",
    "whitebox",
]

[project.urls]
"Homepage" = "https://github.com/passaH2O/GeoFlood"
"Repository" = "https://github.com/passaH2O/GeoFlood"
"Bug Tracker" = "https://github.com/passaH2O/GeoFlood/issues"
